# huffman

./: CMakeLists.txt  Coder.cpp  CoderTester.cpp  Decoder.cpp  Getter.cpp  Heap.cpp  HuffmanTree.cpp  Parser.cpp  Putter.cpp  README.md  main.cpp
headers/: Coder.h  CoderTester.h  Decoder.h  Getter.h  Heap.h  HuffmanTree.h  Parser.h  Putter.h  config.h
